refactor: Order api 관련 필드 추가 및 메서드 수정